# Feed_Code

./: .gitignore  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
intent-telemetry-sdk/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
intent-telemetry-sdk/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVENT_SCHEMA.md
intent-telemetry-sdk/examples/: README.md
intent-telemetry-sdk/examples/demo-app/: app.js  index.html  styles.css
intent-telemetry-sdk/intelligence/: .env.example  Dockerfile  pyproject.toml
intent-telemetry-sdk/intelligence/src/analysis/: friction_classifier.py  insight_generator.py  intent_inferrer.py  session_reconstructor.py
intent-telemetry-sdk/intelligence/src/api/: main.py
intent-telemetry-sdk/intelligence/src/api/routes/: events.py  insights.py
intent-telemetry-sdk/intelligence/src/models/: event.py  session.py
intent-telemetry-sdk/sdk/: package-lock.json  package.json  tsconfig.json
intent-telemetry-sdk/sdk/src/: index.ts
intent-telemetry-sdk/sdk/src/core/: buffer.ts  collector.ts  transmitter.ts
intent-telemetry-sdk/sdk/src/privacy/: anonymizer.ts  filter.ts
intent-telemetry-sdk/sdk/src/trackers/: interactions.ts  navigation.ts  performance.ts  session.ts
intent-telemetry-sdk/sdk/src/types/: events.ts  schema.ts
